feat: add Docker, CI/CD, deployment config